--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,18 +2,30 @@
 <html class="h-100">
   <head>
     <%= render 'shared/head' %>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   </head>
 
   <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0"> 
       <%= render 'shared/navbar' %>
-      <%= render 'shared/notices' %>
-
-      <div class="container mt-4 mx-auto">
+      <div class="p-4">
+        <%= render 'shared/notices' %>
         <%= yield %>
       </div>
     </main>
 
     <%= render 'shared/footer' %>
+        <!-- 
+      The `defer` attribute causes the callback to execute after the full HTML
+      document has been parsed. For non-blocking uses, avoiding race conditions,
+      and consistent behavior across browsers, consider loading using Promises.
+      See https://developers.google.com/maps/documentation/javascript/load-maps-js-api
+      for more information.
+      -->
+
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Rails.application.credentials.google_api_key}&libraries=places&callback=initMap",
+                            async: true,
+                            defer: true,
+                            "data-turbolinks-eval": false %>
   </body>
 </html>
