Change distance and travel time on search to string

--- a/app/views/searches/_search.html.erb
+++ b/app/views/searches/_search.html.erb
@@ -9,9 +9,9 @@
 		<%= search.destination.title %>
 	</td>
 	<td>
-		<%= search.travel_time %> minutes
+		<%= search.travel_time %>
 	</td>
 	<td>
-		<%= search.distance %> miles
+		<%= search.distance %>
 	</td>
 </tr>
