--- a/app/views/shared/_notices.html.erb
+++ b/app/views/shared/_notices.html.erb
@@ -1,4 +1,4 @@
-<div id="notice">
+<div id="notice" class="position-absolute top-50 start-50 translate-middle">
   <% flash.each do |msg_type, message| %>
     <div class="container mt-4 mx-auto">
       <div class="alert <%= bootstrap_class_for(msg_type) %> alert-dismissible fade show" role="alert">
