--- a/app/views/searches/_map.html.erb
+++ b/app/views/searches/_map.html.erb
@@ -1,5 +1,3 @@
-<div class="container mt-4 mx-auto" data-controller="map" data-id="<%= @search.id %>">
-	<span><%= @search.origin.address %></span>
-	<span><%= @search.destination.address %></span>
-	<div id="map" data-map-target="map" style="height: 300px; width: 500px; border: 3px solid red;"></div>
+<div class="container mx-auto" data-controller="map" data-id="<%= @search.id %>">
+	<div id="map" data-map-target="map" style="height: 300px; width: 100%;"></div>
 </div>
