--- a/app/views/searches/_map.html.erb
+++ b/app/views/searches/_map.html.erb
@@ -1,3 +1,3 @@
-<div class="container mx-auto" data-controller="map" data-id="<%= @search.id %>">
+<div class="z-1 container mx-auto" data-controller="map" data-id="<%= @search.id %>">
 	<div id="map" data-map-target="map" style="height: 300px; width: 100%;"></div>
 </div>
