Multiple tweaks and improvements, remove unnused gems and columns, update readme

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -13,6 +13,12 @@
 		<p>
 			<b>Destination Address</b>: <%= @search.destination.address %>
 		</p>
+		<p>
+			<b>Distance</b>: <%= @search.distance %>
+		</p>
+		<p>
+			<b>Travel Time</b>: <%= @search.travel_time %>
+		</p>
 	</div>
 
 	<div class="col">
