--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0"> 
       <%= render 'shared/navbar' %>
-      <div class="p-4">
+      <div class="p-4 position-relative">
         <%= render 'shared/notices' %>
         <%= yield %>
       </div>
