--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -13,6 +13,7 @@
       <th scope="col">Destination</th>
       <th scope="col">Distance</th>
       <th scope="col">Travel Time</th>
+      <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
